--- a/stylesheets/create.css
+++ b/stylesheets/create.css
@@ -1,3 +1,10 @@
+.create-header {
+    height: 50px;
+    padding: 15px;
+    font-size: 20px;
+    line-height: 20px;
+}
+
 .widgets-group {
     margin-top: 30px;
     padding: 30px;
@@ -7,7 +14,8 @@
     width: 200px;
     height: 200px;
     margin-left: 50px;
-    display: inline-block;
+    display: inline-flex;
+    padding: 20px;
     vertical-align: middle;
 }
 
@@ -21,5 +29,32 @@
 }
 
 .create-card {
-    
+    height: 200px;
+    padding: 20px;
+}
+
+.header-description {
+    width: 250px;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+.widget-type {
+    width: 400px;
+    height: 400px;
+    box-shadow: #dddddd 0px 2px 2px 1px;
+    text-align: center;
+}
+
+.widget-img {
+    width: 250px;
+    height: 200px;
+}
+
+.game-badge {
+    background-color: #dddddd;
+    padding: 3px 5px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 14px;
 }
