--- a/stylesheets/create.css
+++ b/stylesheets/create.css
@@ -11,14 +11,14 @@
     padding: 30px;
 }
 
-.widget-body {
+.widgets-body {
     padding: 40px;
 }
 
 .widget-type {
     width: 300px;
     height: 300px;
-    margin: 30px;
+    margin-left: 30px;
     display: inline-block;
     padding: 20px;
     vertical-align: middle;
@@ -56,6 +56,7 @@
     padding: 3px 5px;
     font-size: 12px;
     margin: 15px auto;
+    width: fit-content;
 }
 
 .preview-btn {
@@ -66,4 +67,8 @@
     display: inline-block;
     vertical-align: middle;
     margin-left: 10px;
+}
+
+.widgets-bottom {
+    margin-left: 40px;
 }
