--- a/stylesheets/create.css
+++ b/stylesheets/create.css
@@ -8,7 +8,6 @@
 
 .widgets-group {
     margin-top: 30px;
-    padding: 30px;
 }
 
 .widgets-body {
@@ -18,7 +17,8 @@
 .widget-type {
     width: 300px;
     height: 300px;
-    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
     display: inline-block;
     padding: 20px;
     vertical-align: middle;
