--- a/stylesheets/coupon.css
+++ b/stylesheets/coupon.css
@@ -17,14 +17,20 @@
 
 .discount-type-group {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
     margin-left: 30px;
 }
 
 .discount-add-link {
-    margin-top: 30px;
-    padding-left: 40px;
-    color: #eafae2;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-left: 40px !important;
+    color: #006FBB;
+    cursor: pointer;
+}
+
+.discount-custom {
+    margin: 20px;
 }
 
 .discount-setting > div > div{
