--- a/stylesheets/coupon.css
+++ b/stylesheets/coupon.css
@@ -63,11 +63,17 @@
     display: inline-block;
 }
 
+.chance-discount {
+    display: inline-block;
+    margin-top: 5px;
+}
+
 .view-chances {
     display: inline-block;
     vertical-align: middle;
     float: right;
     margin-right: 20px;
+    margin-top: 30px;
     color: #006FBB;
     cursor: pointer;
 }
@@ -89,6 +95,8 @@
 .chance-value {
     display: inline-block;
     float: right;
+    max-width: 150px;
+    margin-right: 20px;
 }
 
 .chances-group > div {
