--- a/stylesheets/detailSetting.css
+++ b/stylesheets/detailSetting.css
@@ -6,7 +6,7 @@
     margin-bottom: 15px;
 }
 
-.discount-add, .coupon-chance {
+.coupon-chance {
     margin-top: 20px;
 }
 
@@ -40,10 +40,20 @@
 
 .discount-setting > div > div{
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .discount-setting .header3 {
     margin-top: 30px;
+}
+
+.detail-display {
+    margin-top: 20px;
+}
+
+.detail-when {
+    margin-top: 20px;
+    padding-bottom: 20px;
 }
 
 .discount-add .header3 {
@@ -52,6 +62,20 @@
 
 .discount-add > div > div {
     padding-left: 20px;
+    padding-right: 20px;
+}
+
+.reminder-enable {
+    margin-top: 5px;
+}
+
+.timer-type {
+    margin-top: 20px;
+}
+
+.timer-position {
+    margin-top: 20px;
+    padding-bottom: 20px;
 }
 
 .discount-add .add-field {
