--- a/stylesheets/dashboard.css
+++ b/stylesheets/dashboard.css
@@ -67,6 +67,7 @@
     height: 16px;
     text-align: left;
     width: 100%;
+    position: relative;
 }
 
 .dashboard-widget .widget-name > div {
@@ -281,12 +282,18 @@
     width: 280px;
     padding: 5px 0;
     background: white;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    height: 170px;
+    box-shadow: 0px 2px 16px rgba(33, 43, 54, 0.08), 0px 0px 0px rgba(6, 44, 82, 0.1);
 }
 
 .dashboard-widget .widget-name .widget-dropdown > div {
     height: 40px;
     padding: 13px 22px;
     width: 100%;
+    background: white;
 }
 
 .dashboard-widget .widget-name .widget-dropdown > div > img {
@@ -300,4 +307,8 @@
     font-size: 14px;
     line-height: 16px;
     margin-left: 17px;
+}
+
+.dashboard-widget .widget-name .widget-dropdown > div > span:last-child {
+    color: #BF0711;
 }
