--- a/stylesheets/coupon.css
+++ b/stylesheets/coupon.css
@@ -22,6 +22,10 @@
     margin-left: 30px;
 }
 
+.discount-type-group img {
+    margin-left: 20px;
+}
+
 .discount-add-link {
     margin-top: 20px;
     margin-bottom: 20px;
