--- a/stylesheets/dashboard.css
+++ b/stylesheets/dashboard.css
@@ -81,7 +81,6 @@
 .dashboard-widget .widget-name img {
     width: 20px;
     height: 20px;
-    margin-right: 20px;
     display: inline-block;
     vertical-align: middle;
     float: right;
@@ -120,6 +119,8 @@
     font-size:12px;
     line-height: 16px;
     vertical-align: middle;
+    float: left;
+    margin-left: 15px;
 }
 
 .dashboard-email-body .dashboard-email-items {
@@ -140,8 +141,16 @@
 
 .dashboard-email-body .email-kind img {
     width: 36px;
-    height: 23px;
     display: inline-block;
+}
+
+.dashboard-email-body .email-kind img:first-child {
+    height: 34px;
+}
+
+.dashboard-email-body .email-kind img:last-child {
+    margin-top: 3px;
+    height: 23px;
 }
 
 .dashboard-email-body .email-kind div {
@@ -178,8 +187,8 @@
 }
 
 .dashboard-email-body .email-footer img {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     margin-left: 10px;
 }
 
@@ -278,6 +287,11 @@
     pointer-events: none;
 }
 
+.dashboard-widget .widget-img img {
+    width: 100%;
+    height: 100%;
+}
+
 .dashboard-widget .widget-name .widget-dropdown {
     width: 280px;
     padding: 5px 0;
@@ -297,9 +311,27 @@
     cursor: pointer;
 }
 
-.dashboard-widget .widget-name .widget-dropdown > div > img {
-    width: 13px;
-    height: 13px;
+.dashboard-widget .widget-name .widget-dropdown > div > img:nth-child(1) {
+    width: 16px;
+    height: 16px;
+    float: left;
+}
+
+.dashboard-widget .widget-name .widget-dropdown > div > img:nth-child(2) {
+    width: 8px;
+    height: 14px;
+    float: left;
+}
+
+.dashboard-widget .widget-name .widget-dropdown > div > img:nth-child(3) {
+    width: 20px;
+    height: 20px;
+    float: left;
+}
+
+.dashboard-widget .widget-name .widget-dropdown > div > img:nth-child(4) {
+    width: 20px;
+    height: 20px;
     float: left;
 }
 
